Fix #109417: Cycles HIP RT crash with multi device rendering

A couple of checks were missing to handle the multi device rendering.

Pull Request: https://projects.blender.org/blender/blender/pulls/110512